docker_k8s_test_deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-k8s-test-service
spec:
  selector:
    app: docker-k8s-test
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 8085
      # Port to forward to inside the pod
      targetPort: 8080
      # Port accessible outside cluster
      nodePort: 30010
  type: LoadBalancer



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-k8s-test-deploy
spec:
  selector:
    matchLabels:
      app: docker-k8s-test
  replicas: 2
  template:
    metadata:
      labels:
        app: docker-k8s-test
    spec:
      containers:
        - name: docker-k8s-test
          image: shlomigonen/docker_k8s_test_container:BUILD_VERSION
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
