docker_k8s_test_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-k8s-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /rest/rivusai/hello
        #pathType: Prefix
        backend:
          serviceName: docker-k8s-test-service
          servicePort: 8085
#spec:
#  rules:
#    - host: www.rivusai.com
#      http:
#        paths:
#          - path: /rest/rivusai/hello
#            #pathType: Prefix
#            backend:
#              serviceName: docker-k8s-test-service
#              servicePort: 8085
#spec:
#  backend:
#    serviceName: docker-k8s-test-service
#    servicePort: 8085
